# Mainframe

./: .gitignore  .gitreview  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
.github/workflows/: main.yml
cmake/: cef.cmake
database/: CMakeLists.txt
database/include/mainframe/database/base/: connection.h  database.h  query.h  result.h  row.h  value.h
database/include/mainframe/database/mysql/: communicator.h  connection.h  database.h  field.h  foreignkey.h  table.h  valuetypes.h
database/include/mainframe/libs/: sha1.h
database/src/base/: connection.cpp  database.cpp  result.cpp  row.cpp  value.cpp
database/src/libs/: sha1.cpp
database/src/mysql/: communicator.cpp  connection.cpp  database.cpp
database/tests/: CMakeLists.txt
database/tests/query/: CMakeLists.txt
database/tests/query/src/: main.cpp
database/tests/tableinfo/: CMakeLists.txt
database/tests/tableinfo/src/: main.cpp
game/: CMakeLists.txt
game/include/game/: engine.h  window.h
game/include/mainframe/game/: camera3d.h  desktop.h  engine.h  entity.h  messageincomming.h  messageoutgoing.h  player.h  server.h  window.h  world.h
game/src/: camera3d.cpp  desktop.cpp  engine.cpp  entity.cpp  messageincomming.cpp  messageoutgoing.cpp  player.cpp  server.cpp  window.cpp  world.cpp
game/tests/: CMakeLists.txt
game/tests/sanitycheck/: CMakeLists.txt
game/tests/sanitycheck/src/: main.cpp
game/tests/window/: CMakeLists.txt
game/tests/window/src/: main.cpp
math/: CMakeLists.txt
math/include/mainframe/math/: aabb.h  angle.h  line.h  matrix.h  polygon.h  vector2.h  vector3.h  vector4.h
math/include/mainframe/numbers/: pi.h
math/src/: dummy.cpp  line.cpp  matrix.cpp
math/tests/: CMakeLists.txt
math/tests/angle/: CMakeLists.txt
math/tests/angle/src/: main.cpp
math/tests/vector2/: CMakeLists.txt
math/tests/vector2/src/: main.cpp
networking/: CMakeLists.txt
networking/include/mainframe/networking/: packet.h  socket.h
networking/include/mainframe/networking/enum/: errors.h
networking/src/: packet.cpp  socket.cpp
networking/tests/: CMakeLists.txt
networking/tests/packet/: CMakeLists.txt
networking/tests/packet/src/: main.cpp
ptalk/: CMakeLists.txt  readme.md
ptalk/include/mainframe/ptalk/: client.h  message.h  messageincoming.h  messageincomming.h  server.h
ptalk/src/: client.cpp  message.cpp  messageincoming.cpp  messageincomming.cpp  server.cpp
ptalk/tests/: CMakeLists.txt
ptalk/tests/countup/: CMakeLists.txt
ptalk/tests/countup/src/: main.cpp
ptalk/tests/pingpong/: CMakeLists.txt
ptalk/tests/pingpong/src/: main.cpp
render/: CMakeLists.txt  README.md
render/include/mainframe/render/: atlas.h  color.h  font.h  shader.h  stencil.h  textengine.h  textglyph.h  texture.h  uniform.h  viabuffer.h
render/src/: atlas.cpp  font.cpp  shader.cpp  stencil.cpp  textengine.cpp  texture.cpp  uniform.cpp  viabuffer.cpp
render/src/libs/: lodepng.cpp
render/tests/: CMakeLists.txt
render/tests/stencil/: CMakeLists.txt
render/tests/stencil/src/: main.cpp
samples/: CMakeLists.txt
samples/tomatris/: CMakeLists.txt
samples/tomatris/include/tomatris/: game.h
samples/tomatris/src/: game.cpp  main.cpp
ui/: CMakeLists.txt
ui/include/mainframe/libs/cef/: cef.h
ui/include/mainframe/ui/: element.h  elementcontainer.h  keystate.h  modifierkey.h  mousestate.h  scene.h
ui/include/mainframe/ui/elms/: button.h  frame.h  image.h  label.h  panel.h  scrollbar.h  scrollpanel.h  scrollpanelback.h  textbox.h
ui/src/: element.cpp  elementcontainer.cpp  scene.cpp
ui/src/elms/: button.cpp  frame.cpp  image.cpp  label.cpp  panel.cpp  scrollpanel.cpp  scrollpanelback.cpp  textbox.cpp
ui/src/libs/cef/: cef.cpp
ui/tests/: CMakeLists.txt
ui/tests/simplemenu/: .gitignore  CMakeLists.txt
ui/tests/simplemenu/src/: main.cpp
utils/: CMakeLists.txt
utils/include/mainframe/utils/: crc32.h  event.hpp  eventnamed.hpp  md5.h  random.h  ringbuffer.hpp  string.h  thread.h  time.h
utils/src/: crc32.cpp  dummy.cpp  md5.cpp  random.cpp  string.cpp  thread.cpp  time.cpp
